# ScholorInbox-Slack-Bot

./: .dockerignore  .env.example  .gitignore  CICD.md  Dockerfile  LICENSE  README.ja.md  SETUP_GUIDE.ja.md  TESTING.ja.md  config.yaml  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  arxiv_client.py  config.py  date_utils.py  llm_client.py  main.py  models.py  scheduler.py  scraper.py  slack_client.py
tests/: __init__.py  conftest.py  test_arxiv_client.py  test_config.py  test_date_utils.py  test_integration.py  test_llm_client.py  test_models.py  test_scheduler.py  test_scraper_metadata.py  test_slack_client.py
